--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "author": "Andrew Morris",
   "license": "MIT",
   "devDependencies": {
-    "chai": "^2.2.0"
+    "chai": "^2.2.0",
+    "eslint": "^1.4.3",
+    "eslint-config-voltrevo": "0.0.3"
   }
 }
