--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "chai": "^2.2.0",
     "eslint": "^1.4.3",
-    "eslint-config-voltrevo": "0.0.3"
+    "eslint-config-voltrevo": "0.0.3",
+    "eslint-plugin-require-path-exists": "^1.0.15"
   }
 }
