Fix linting issues

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
     "no-warning-comments": 0,
     "dot-notation": [2, {"allowKeywords": true}],
     "no-undef-init": 0,
-    "no-nested-ternary": 0
+    "no-nested-ternary": 0,
+    "new-cap": 0
   }
 }
