--- a/package.json
+++ b/package.json
@@ -1,25 +1,40 @@
 {
   "name": "parser",
   "version": "0.0.4",
-  "description": "Parser library.",
-  "main": "parser.js",
-  "directories": {
-    "test": "test"
+  "description": "A parser library based on functional composition of stream consumers.",
+  "homepage": "https://github.com/voltrevo/parser#readme",
+  "repository": "voltrevo/parser",
+  "author": {
+    "name": "Andrew Morris",
+    "email": "voltrevo@gmail.com",
+    "url": "http://andrewmorris.io/"
   },
-  "scripts": {
-    "test": "mocha"
-  },
+  "files": [
+    "lib"
+  ],
+  "main": "lib/index.js",
   "keywords": [
     "parser",
     "javascript",
     "json"
   ],
-  "author": "Andrew Morris",
-  "license": "MIT",
   "devDependencies": {
     "chai": "^2.2.0",
     "eslint": "^1.4.3",
     "eslint-config-voltrevo": "0.0.3",
     "eslint-plugin-require-path-exists": "^1.0.15"
-  }
+    "gulp": "^3.6.0",
+    "gulp-eslint": "^1.0.0",
+    "gulp-exclude-gitignore": "^1.0.0",
+    "gulp-istanbul": "^0.9.0",
+    "gulp-mocha": "^2.0.0",
+    "gulp-plumber": "^1.0.0",
+    "gulp-nsp": "^0.4.5",
+    "gulp-coveralls": "^0.1.0"
+  },
+  "scripts": {
+    "prepublish": "gulp prepublish",
+    "test": "gulp"
+  },
+  "license": "MIT"
 }
