--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "chai": "^2.2.0",
     "eslint": "^1.4.3",
     "eslint-config-voltrevo": "0.0.3",
-    "eslint-plugin-require-path-exists": "^1.0.15"
+    "eslint-plugin-require-path-exists": "^1.0.15",
     "gulp": "^3.6.0",
     "gulp-eslint": "^1.0.0",
     "gulp-exclude-gitignore": "^1.0.0",
