--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "javascript",
     "json"
   ],
+  "dependencies": {
+    "voltrevo-privacy": "^0.1.0"
+  },
   "devDependencies": {
     "chai": "^2.2.0",
     "eslint": "^1.4.3",
