Change name to voltrevo-parser, version 0.1.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "parser",
-  "version": "0.0.4",
+  "name": "voltrevo-parser",
+  "version": "0.1.0",
   "description": "A parser library based on functional composition of stream consumers.",
   "homepage": "https://github.com/voltrevo/parser#readme",
   "repository": "voltrevo/parser",
